--- a/FormBuilder/src/app/forms/form-detail/form-detail.component.html
+++ b/FormBuilder/src/app/forms/form-detail/form-detail.component.html
@@ -1,4 +1,4 @@
-<mat-vertical-stepper *ngIf="form$ | async as form">
+<mat-vertical-stepper *ngIf="form">
   <mat-step *ngFor="let page of form.pageList">
     <ng-template matStepLabel>{{page.text}}</ng-template>
     <app-page-detail [page]='page' [itemList]='form.itemList'></app-page-detail>
@@ -6,4 +6,4 @@
 </mat-vertical-stepper>
 
 <p>Form: </p>
-<textarea readonly rows="50" cols="160">{{form$ | async | json}}</textarea>
+<textarea readonly rows="50" cols="160">{{form | json}}</textarea>
