--- a/FormBuilder/src/app/forms/item-detail/item-detail.component.scss
+++ b/FormBuilder/src/app/forms/item-detail/item-detail.component.scss
@@ -1,3 +1,8 @@
+:host {
+    display: block;
+    position: relative;
+}
+
 .mat-form-field {
     width: 100%;
 }
@@ -15,4 +20,23 @@
 }
 .mat-checkbox ~ .mat-checkbox {
     margin-left: 16px;
+}
+
+.edit-mode {
+    position: absolute;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    &:hover {
+        border: black solid 1px;
+        border-radius: 5px;
+        opacity: 1;
+    }
+}
+
+.edit-controls {
+    position: absolute;
+    right: 0px;
+    top: -1em;
 }
