--- a/FormBuilder/src/app/forms/page-detail/page-detail.component.html
+++ b/FormBuilder/src/app/forms/page-detail/page-detail.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let item of pageItems">
+<div *ngFor="let item of pageItems" class="pt-3">
     <app-item-detail [item]="item"></app-item-detail>
 </div>
