--- a/FormBuilder/src/app/forms/form-detail/form-detail.component.html
+++ b/FormBuilder/src/app/forms/form-detail/form-detail.component.html
@@ -1,7 +1,7 @@
 <mat-vertical-stepper *ngIf="form">
   <mat-step *ngFor="let page of form.pageList">
     <ng-template matStepLabel>{{page.text}}</ng-template>
-    <app-page-detail [page]='page' [itemList]='form.itemList'></app-page-detail>
+    <app-page-detail-shell [pageId]='page.pageId'></app-page-detail-shell>
   </mat-step>
 </mat-vertical-stepper>
 <mat-spinner *ngIf="!form"></mat-spinner>
