--- a/FormBuilder/src/app/forms/page-detail/page-detail.component.html
+++ b/FormBuilder/src/app/forms/page-detail/page-detail.component.html
@@ -1,3 +1,4 @@
-<div *ngFor="let item of pageItems" class="pt-3">
-    <app-item-detail [item]="item" (deleteItemEvent)="itemDeleted($event)"></app-item-detail>
+<div class="pt-3"></div>
+<div *ngFor="let item of pageItems">
+    <app-item-detail-shell [itemId]="item.itemId"></app-item-detail-shell>
 </div>
