Display dialog for add/edit

--- a/FormBuilder/src/app/forms/page-detail/page-detail-shell.component.html
+++ b/FormBuilder/src/app/forms/page-detail/page-detail-shell.component.html
@@ -1,1 +1,2 @@
-<app-page-detail *ngIf="pageItems$ | async as pageItems" [pageItems]="pageItems">
+<app-page-detail *ngIf="pageItems$ | async as pageItems" [pageItems]="pageItems" [editMode]="editMode$ | async"
+    (addItemEvent)="itemAdded($event)">
