--- a/FormBuilder/src/app/forms/page-detail/page-detail.component.html
+++ b/FormBuilder/src/app/forms/page-detail/page-detail.component.html
@@ -1,4 +1,15 @@
-<div class="pt-3"></div>
+<div class="pt-3">
+</div>
 <div *ngFor="let item of pageItems">
+    <div *ngIf="editMode">
+        <button color="primary" mat-mini-fab type="button" (click)="addItemClicked(item.order)">
+            <mat-icon>add_circle_outline</mat-icon>
+        </button>
+    </div>
     <app-item-detail-shell [itemId]="item.itemId"></app-item-detail-shell>
+</div>
+<div *ngIf="editMode && pageItems">
+    <button color="primary" mat-mini-fab type="button" (click)="addItemClicked(pageItems.length)">
+        <mat-icon>add_circle_outline</mat-icon>
+    </button>
 </div>
