--- a/FormBuilder/src/app/forms/item-detail/item-detail-shell.component.html
+++ b/FormBuilder/src/app/forms/item-detail/item-detail-shell.component.html
@@ -1,2 +1,2 @@
-<app-item-detail *ngIf="item$ | async as item" [item]="item" (editItemEvent)="itemEdited()"
-    (deleteItemEvent)="itemDeleted()"></app-item-detail>
+<app-item-detail *ngIf="item$ | async as item" [item]="item" [editMode]="editMode$ | async"
+    (editItemEvent)="itemEdited()" (deleteItemEvent)="itemDeleted()"></app-item-detail>
