--- a/FormBuilder/src/app/forms/item-editor/item-editor.component.html
+++ b/FormBuilder/src/app/forms/item-editor/item-editor.component.html
@@ -1,9 +1,35 @@
 <p mat-dialog-title>Item Editor</p>
-<mat-dialog-content>
-    <p>Id: {{data.id}}</p>
-    <p>Order: {{data.order}}</p>
-</mat-dialog-content>
-<mat-dialog-actions>
-    <button mat-button [mat-dialog-close]="true">Save</button>
-    <button mat-button mat-dialog-close>Cancel</button>
-</mat-dialog-actions>
+<form>
+    <mat-dialog-content>
+        <mat-form-field appearance="fill">
+            <mat-label>ID</mat-label>
+            <input matInput [value]="item.itemId">
+        </mat-form-field>
+        <!-- TODO: Drop down of page IDs -->
+        <mat-form-field appearance="fill">
+            <mat-label>Page ID</mat-label>
+            <input matInput [value]="item.pageId">
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Description</mat-label>
+            <input matInput [value]="item.description">
+        </mat-form-field>
+        <app-rich-text-editor labelText='Text' [data]='item.text'></app-rich-text-editor>
+        <mat-form-field appearance="fill">
+            <mat-label>Question Type</mat-label>
+            <mat-select [value]='item.questionType'>
+                <mat-option *ngFor="let typeName of questionTypes" [value]="typeName">
+                    {{typeName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Order</mat-label>
+            <input matInput type="number" [value]="item.order">
+        </mat-form-field>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+        <button mat-button [mat-dialog-close]="true">Save</button>
+        <button mat-button mat-dialog-close>Cancel</button>
+    </mat-dialog-actions>
+</form>
