--- a/FormBuilder/src/app/forms/item-editor/item-editor.component.html
+++ b/FormBuilder/src/app/forms/item-editor/item-editor.component.html
@@ -1,9 +1,10 @@
 <p mat-dialog-title>Item Editor</p>
-<form>
+<form [formGroup]="form">
     <mat-dialog-content>
         <mat-form-field appearance="fill">
             <mat-label>ID</mat-label>
-            <input matInput [value]="item.itemId">
+            <input matInput formControlName="id">
+            <mat-error *ngIf="form.controls.id.errors?.required">Required</mat-error>
         </mat-form-field>
         <!-- TODO: Drop down of page IDs -->
         <mat-form-field appearance="fill">
@@ -29,7 +30,7 @@
         </mat-form-field>
     </mat-dialog-content>
     <mat-dialog-actions>
-        <button mat-button [mat-dialog-close]="true">Save</button>
+        <button mat-button type="submit" (click)="save()">Save</button>
         <button mat-button mat-dialog-close>Cancel</button>
     </mat-dialog-actions>
 </form>
