--- a/FormBuilder/src/app/forms/options-editor/options-editor.component.html
+++ b/FormBuilder/src/app/forms/options-editor/options-editor.component.html
@@ -3,13 +3,16 @@ Options:
     <ng-container matColumnDef="value">
         <th mat-header-cell *matHeaderCellDef>Value</th>
         <td mat-cell *matCellDef="let option">
-            <mat-form-field appearance="fill"><input matInput [value]="option.value"></mat-form-field>
+            <mat-form-field appearance="fill"><input matInput [value]="option.value"
+                    (change)="valueChange(option.id, $event.target)">
+            </mat-form-field>
         </td>
     </ng-container>
     <ng-container matColumnDef="text">
         <th mat-header-cell *matHeaderCellDef>Text</th>
         <td mat-cell *matCellDef="let option">
-            <mat-form-field appearance="fill"><input matInput [value]="option.text"></mat-form-field>
+            <mat-form-field appearance="fill"><input matInput [value]="option.text"
+                    (change)="textChange(option.id, $event.target)"></mat-form-field>
         </td>
     </ng-container>
     <ng-container matColumnDef="editButtons">
