--- a/FormBuilder/src/app/forms/options-editor/options-editor.component.html
+++ b/FormBuilder/src/app/forms/options-editor/options-editor.component.html
@@ -30,3 +30,6 @@ Options:
     <tr mat-header-row *matHeaderRowDef="optionColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: optionColumns;"></tr>
 </table>
+<button color="primary" mat-mini-fab type="button" style="float: right;" (click)="addItem()">
+    <mat-icon>add_circle_outline</mat-icon>
+</button>
