--- a/FormBuilder/src/app/forms/item-detail/item-detail.component.html
+++ b/FormBuilder/src/app/forms/item-detail/item-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="item" [class.edit-mode]="editMode">
+<div *ngIf="item" [class.edit-mode]="editMode" [class.ghost]="!item.isDisplayed">
     <div *ngIf="editMode" class="edit-controls">
         <button color="primary" mat-mini-fab type="button" (click)="editItem()">
             <mat-icon>edit</mat-icon>
