--- a/FormBuilder/src/app/forms/item-editor/item-editor.component.html
+++ b/FormBuilder/src/app/forms/item-editor/item-editor.component.html
@@ -41,7 +41,7 @@
         </app-options-editor>
     </mat-dialog-content>
     <mat-dialog-actions>
-        <button mat-button type="submit" (click)="save()">Save</button>
-        <button mat-button mat-dialog-close>Cancel</button>
+        <button mat-raised-button color="primary" type="submit" (click)="save()">Save</button>
+        <button mat-stroked-button color="primary" mat-dialog-close>Cancel</button>
     </mat-dialog-actions>
 </form>
