Reduced state churn by moving arrays into separate pieces of state

--- a/FormBuilder/src/app/forms/form-detail/form-detail-shell.component.html
+++ b/FormBuilder/src/app/forms/form-detail/form-detail-shell.component.html
@@ -1,1 +1,1 @@
-<app-form-detail *ngIf="combined$ | async as combined" [form]="combined.form" [pageList]="combined.pageList">
+<app-form-detail *ngIf="combined$ | async as combined" [formName]="combined.formName" [pageList]="combined.pageList">
