--- a/FormBuilder/src/app/forms/form-detail/form-detail.component.html
+++ b/FormBuilder/src/app/forms/form-detail/form-detail.component.html
@@ -1,13 +1,12 @@
-<div *ngIf="form">
-  <h2>{{form.name}}</h2>
+<div *ngIf="formName">
+  <h2>{{formName}}</h2>
   <mat-vertical-stepper>
     <mat-step *ngFor="let page of pageList">
       <ng-template matStepLabel>{{page.text}}</ng-template>
       <app-page-detail-shell [pageId]='page.pageId'></app-page-detail-shell>
     </mat-step>
   </mat-vertical-stepper>
-  <mat-spinner *ngIf="!form"></mat-spinner>
+  <mat-spinner *ngIf="!formName"></mat-spinner>
 
   <p>Form: </p>
-  <textarea readonly rows="50" cols="160">{{form | json}}</textarea>
 </div>
