--- a/FormBuilder/src/app/controls/checkbox-list/checkbox-list.component.html
+++ b/FormBuilder/src/app/controls/checkbox-list/checkbox-list.component.html
@@ -1,5 +1,4 @@
 <p [innerHtml]="labelText"></p>
-<mat-checkbox *ngFor="let option of controlOptions" [value]="option.value" [disabled]="disabled"
-    [formControl]="option.control">
+<mat-checkbox *ngFor="let option of controlOptions" [value]="option.value" [formControl]="option.control">
     {{option.text}}
 </mat-checkbox>
